Refactor to support new Nodes type